[package]
name = "iced_subscription"
version = "0.1.0"
authors = ["Marc Schettke <it@schettke.com>"]
edition = "2018"
publish = false

[dependencies]
iced = { git = "https://github.com/hecrj/iced" }
iced_native = { git = "https://github.com/hecrj/iced" }
iced_futures = { git = "https://github.com/hecrj/iced", features = ["async-std"] }
async-std = { version = "1.0", features = ["unstable"] }
